# cfd_simple_cube_qt

./: .gitignore  CMakeLists.txt  DISCUSSION.md  README.md
src/: DomainView3D.cpp  DomainView3D.hpp  FieldData.cpp  FieldData.hpp  FieldView.cpp  FieldView.hpp  MainWindow.cpp  MainWindow.hpp  SolverWorker.cpp  SolverWorker.hpp  main.cpp
web/: annotations.py  build_static.py  pyproject.toml  server.py
web/site/: architecture.html  file_cgsolver.html  file_cmake.html  file_domain3d_cpp.html  file_domain3d_h.html  file_field.html  file_fielddata_cpp.html  file_fielddata_h.html  file_fieldview_cpp.html  file_fieldview_h.html  file_fvmatrix.html  file_gui_main.html  file_io_cpp.html  file_io_h.html  file_main_solver.html  file_mainwindow_cpp.html  file_mainwindow_h.html  file_mesh.html  file_simple_cpp.html  file_simple_h.html  file_vec3.html  file_worker_cpp.html  file_worker_h.html  index.html
web/site/theory/: cpp__00-overview.html  cpp__01-vec3.html  cpp__02-field.html  cpp__03-mesh.html  cpp__04-fvmatrix.html  cpp__05-cgsolver.html  cpp__06-simple.html  cpp__07-io.html  cpp__08-main.html  cpp__09-language.html  index.html  menu.js  results.html  solver__01-loop.html  solver__02-running.html  solver__03-validation.html  style.css  theory__01-navier-stokes.html  theory__02-fvm.html  theory__03-convection.html  theory__04-simple.html  theory__05-rhie-chow.html  theory__06-boundary.html  theory__07-linear-system.html  theory__08-cg.html  theory__09-parallel.html
web/templates/: architecture.html  base.html  file.html  index.html
